# poetry-yet-another-monorepo-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
sample/: pyproject.toml
sample/src/proj-a/: pyproject.toml
sample/src/proj-a/proj_a/: a.py
sample/src/proj-b/: pyproject.toml
sample/src/proj-c/: pyproject.toml
tests/: defaults.py  helpers.py  scenarios.py  test_cmd_build_projects_pinned.py  test_cmd_set_projects_version.py  test_monorepo.py
tests/test_repos/test_repo_1/: pyproject.toml
tests/test_repos/test_repo_1/projects/project-bar/: pyproject.toml
tests/test_repos/test_repo_1/projects/project-baz/: pyproject.toml
tests/test_repos/test_repo_1/projects/project-foo/: pyproject.toml
tests/test_repos/test_repo_1/projects/project-qux/: pyproject.toml
yamp/: config.py  monorepo.py  project.py  utils.py
yamp/commands/: __init__.py  base.py  build_projects_pinned.py  factory.py  list_projects.py  set_projects_version.py
yamp/plugin/: __init__.py  plugin.py
