[project]
name = "proj-a"
version = "0.0.1"
description = ""
authors = [
    {name = "author",email = "author@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{ include = "proj_a" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
