[project]
name = "test-repo"
version = "0.0.1"
description = ""
authors = [
    {name = "test",email = "test@test.com"}
]
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry.requires-plugins]
poetry-yet-another-monorepo-plugin = ">=0.1.0"

[[tool.poetry.source]]
name = "repo-a"
url = "https://pypi.a.org/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "repo-b"
url = "https://pypi.b.org/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "repo-c"
url = "https://pypi.c.org/simple/"
priority = "explicit"

[tool.poetry-yet-another-monorepo-plugin]
projects-dir = "projects"
projects-inherit-repos = false
exclude-projects = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
