[project]
name = "proj-foo"
version = "0.0.1"
description = ""
authors = [
    {name = "test",email = "test@test.com"}
]
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{ include = "proj_foo" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
